Downgrading java to version 8